# HScanAPI

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: history.rs  mod.rs  product_api.rs
src/models/: code.rs  history.rs  mod.rs  product_details.rs  scan.rs
src/orm/: mongo_repo.rs
tests/: routes.rs
