[package]
name = "halal_scan_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.9"
futures = "0.3"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 